<?xml version="1.0" encoding="utf-8"?>
<resources>   
    <string name="app_name">Task Manager</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="no_tasks">No Tasks =)</string>
    <string name="remove_completed">Remove</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">Would you like to add this task?</string>
    <string name="discard">Discard</string>
    <string name="empty_task">Empty Task</string>
    <string name="task_empty_message">Task name is empty</string>
    <string name="my_tasks">My Tasks</string>
    <string name="select_account">Select a Google account</string>
    <string name="authentication_request">Manage your tasks</string>
</resources>
