<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:padding="10dp">
	
	<TextView 
		android:id="@+id/task_list_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/my_tasks" 
	/>
	
	<ListView 
		android:id="@id/android:list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/task_list_label"
		android:layout_above="@+id/new_button"
	/>
	
	<TextView 
		android:id="@id/android:empty"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical|center_horizontal"
		android:layout_below="@id/task_list_label"
		android:layout_above="@+id/new_button"
		android:text="@string/no_tasks"
	/>
	
	<Button 
		android:id="@+id/new_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:text="@string/add_task"
	/>
	
	<Button 
		android:id="@+id/sync_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_alignParentBottom="true"
		android:text="Sync"
	/>
	
	<Button 
		android:id="@+id/remove_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:text="@string/remove_completed"
	/>

</RelativeLayout>
