<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp">
	
	<TextView 
		android:id="@+id/task_name_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/add_new_task"
	/>
	
	<EditText 
		android:id="@+id/task_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/task_name_label"		
	/>
	
	<Button 
		android:id="@+id/add_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/add_task"
		android:layout_below="@id/task_name"
		android:layout_alignParentLeft="true"
	/>
	
	<Button 
		android:id="@+id/cancel_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/cancel"
		android:layout_alignParentRight="true"
		android:layout_below="@id/task_name"
	/>

</RelativeLayout >
